--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "lib/ds-spell"]
 	path = lib/ds-spell
 	url = https://github.com/dapphub/ds-spell
+[submodule "lib/ds-pause"]
+	path = lib/ds-pause
+	url = https://github.com/makerdao/ds-pause
